--- a/.github/workflows/rake.yml
+++ b/.github/workflows/rake.yml
@@ -10,8 +10,10 @@ jobs:
   rake:
     runs-on: ubuntu-latest
     strategy:
+      fail-fast: false
       matrix:
-        ruby: [3.0, 3.1, 3.2, 3.3, 3.4, "head"]
+        ruby: ["3.0", "3.1", "3.2", "3.3", "3.4", "head"]
+
     steps:
       - uses: actions/checkout@v4
       - uses: ruby/setup-ruby@v1
